--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,13 +8,20 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
+.page{
+	background-color:#ffffff;
+}
+
+.store-section{
+	margin-bottom: 10px;
+}
 
 .inline-brands {
-	margin-left: 10px;
+	margin: 0 10px;
 }
 
 .store-box {
-	max-height: 500px;
+	max-height: 70vh;
 	overflow: auto;
 }
 
@@ -41,4 +48,41 @@
 .form-location{
 	margin-bottom:20px;
 }
+
+.list-group-item {
+	background-color: #e4e4e4;
+	border: 1px solid #a3aeb5;
+	&.selected {
+		background-color: #ffffff;
+	}
+}
+
+.brand-warning{
+	padding:10px;
+}
+
+.footer-spacer{
+	margin-bottom: 40px;
+}
+
+.location-item {
+    margin-right: 0;
+    margin-left: 0;
+    background-color: #fff;
+    border-color: #ddd;
+    border-width: 1px;
+    border-radius: 4px 4px 0 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+@media (min-width: 768px) {
+
+	 .form-inline .ulrbox-item {
+	    width: 500px;
+	}
+
+}
+
+
 
