--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8350,8 +8350,16 @@ button.close {
   }
 }
 
-.page {
+.has-error {
   background-color: #ffffff;
+  padding: 9px;
+  border-radius: 3px;
+  border: 1px solid #b90000;
+  margin-bottom: 20px;
+}
+
+.has-error ul {
+  margin-bottom: 0;
 }
 
 .store-section {
@@ -8360,6 +8368,11 @@ button.close {
 
 .inline-brands {
   margin: 0 10px;
+}
+
+.location-box {
+  max-height: 50vh;
+  overflow: auto;
 }
 
 .store-box {
@@ -8415,9 +8428,25 @@ button.close {
   box-shadow: none;
 }
 
+.float-btn {
+  position: fixed;
+  z-index: 99999;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+}
+
 @media (min-width: 768px) {
   .form-inline .ulrbox-item {
     width: 500px;
+  }
+
+  .float-btn {
+    position: fixed;
+    z-index: 99999;
+    bottom: 20px;
+    right: 0;
+    width: auto;
   }
 }
 
