--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,8 +8,15 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-.page{
+.has-error {
 	background-color:#ffffff;
+	padding: 9px;
+    border-radius: 3px;
+    border: 1px solid #b90000;
+	margin-bottom: 20px;
+    ul {
+    	margin-bottom:0;
+    }
 }
 
 .store-section{
@@ -20,6 +27,10 @@
 	margin: 0 10px;
 }
 
+.location-box{
+	max-height: 50vh;
+	overflow: auto;
+}
 .store-box {
 	max-height: 70vh;
 	overflow: auto;
@@ -76,10 +87,27 @@
     box-shadow: none;
 }
 
+.float-btn {
+		position: fixed;
+	    z-index: 99999;
+	    bottom: 0;
+	    right: 0;
+	    width:100%;
+	}
+
+
 @media (min-width: 768px) {
 
 	 .form-inline .ulrbox-item {
 	    width: 500px;
+	}
+
+	.float-btn {
+		position: fixed;
+	    z-index: 99999;
+	    bottom: 20px;
+	    right: 0;
+	    width:auto;
 	}
 
 }
