--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8362,6 +8362,10 @@ button.close {
   margin-bottom: 0;
 }
 
+.scroll-content-box {
+  overflow: auto;
+}
+
 .store-section {
   margin-bottom: 10px;
 }
@@ -8382,6 +8386,16 @@ button.close {
 
 .icon-logo {
   max-width: 75px;
+}
+
+.logo-thumb {
+  padding: 5px;
+  width: 150px;
+}
+
+.logo-img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .store-list-container .list-group {
@@ -8434,6 +8448,85 @@ button.close {
   bottom: 0;
   right: 0;
   width: 100%;
+}
+
+.loading-blocker {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  opacity: 1;
+}
+
+.spinner {
+  margin: auto;
+  width: 100px;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  display: inline-block;
+}
+
+.spinner > div {
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.7s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.7s infinite ease-in-out both;
+  margin-right: 5px;
+}
+
+.spinner > div.spinner--blue > div {
+  background: #2e81b6;
+}
+
+.spinner > div .spinner__item1 {
+  -webkit-animation-delay: -0.60s;
+  animation-delay: -0.60s;
+}
+
+.spinner > div .spinner__item2 {
+  -webkit-animation-delay: -0.40s;
+  animation-delay: -0.40s;
+}
+
+.spinner > div .spinner__item3 {
+  -webkit-animation-delay: -0.20s;
+  animation-delay: -0.20s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 @media (min-width: 768px) {
