--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,6 +19,10 @@
     }
 }
 
+.scroll-content-box {
+	overflow:auto;
+}
+
 .store-section{
 	margin-bottom: 10px;
 }
@@ -38,6 +42,18 @@
 
 .icon-logo{
 	max-width: 75px;
+}
+
+.logo-thumb{
+	padding:5px;
+	// border: 1px solid #000000;
+	width: 150px;
+	// height: 150px;
+}
+
+.logo-img{
+	max-width: 100%;
+    max-height: 100%;
 }
 
 .store-list-container
@@ -88,12 +104,107 @@
 }
 
 .float-btn {
-		position: fixed;
-	    z-index: 99999;
-	    bottom: 0;
-	    right: 0;
-	    width:100%;
+	position: fixed;
+    z-index: 99999;
+    bottom: 0;
+    right: 0;
+    width:100%;
+}
+
+.loading-blocker{
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, .5);
+    text-align: center;
+    opacity: 1;
+}
+
+
+
+
+// LOADING
+// 
+.spinner {
+    margin: auto;
+    width: 100px;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    display: inline-block;
+}
+
+
+
+.spinner>div {
+    width: 16px;
+    height: 16px;
+    background-color: #fff;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.7s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.7s infinite ease-in-out both;
+    margin-right: 5px;
+	&.spinner--blue>div {
+	    background: rgba(46, 129, 182, 1);
 	}
+	.spinner__item1 {
+	    -webkit-animation-delay: -0.60s;
+	    animation-delay: -0.60s;
+	}
+
+	.spinner__item2 {
+	    -webkit-animation-delay: -0.40s;
+	    animation-delay: -0.40s;
+	}
+
+	.spinner__item3 {
+	    -webkit-animation-delay: -0.20s;
+	    animation-delay: -0.20s;
+	}
+
+}
+
+
+
+// .spinner--blue>div {
+//     background: rgba(46, 129, 182, 1);
+// }
+
+
+
+@-webkit-keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        opacity: 0;
+    }
+    40% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        opacity: 0;
+    }
+    40% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 
 
 @media (min-width: 768px) {
