--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8363,7 +8363,7 @@ button.close {
 }
 
 .scroll-content-box {
-  overflow: auto;
+  position: relative;
 }
 
 .store-section {
@@ -8390,7 +8390,7 @@ button.close {
 
 .logo-thumb {
   padding: 5px;
-  width: 150px;
+  width: 100px;
 }
 
 .logo-img {
@@ -8531,7 +8531,7 @@ button.close {
 
 @media (min-width: 768px) {
   .form-inline .ulrbox-item {
-    width: 500px;
+    width: 300px;
   }
 
   .float-btn {
@@ -8540,6 +8540,18 @@ button.close {
     bottom: 20px;
     right: 0;
     width: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .form-inline .ulrbox-item {
+    width: 470px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .form-inline .ulrbox-item {
+    width: 650px;
   }
 }
 
