--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,7 +20,7 @@
 }
 
 .scroll-content-box {
-	overflow:auto;
+	position: relative;
 }
 
 .store-section{
@@ -47,7 +47,7 @@
 .logo-thumb{
 	padding:5px;
 	// border: 1px solid #000000;
-	width: 150px;
+	width: 100px;
 	// height: 150px;
 }
 
@@ -210,7 +210,7 @@
 @media (min-width: 768px) {
 
 	 .form-inline .ulrbox-item {
-	    width: 500px;
+	    width: 300px;
 	}
 
 	.float-btn {
@@ -224,4 +224,21 @@
 }
 
 
+@media (min-width: 992px) {
+
+     .form-inline .ulrbox-item {
+        width: 470px;
+    }
+
+}
+
+
+@media (min-width: 1200px) {
+
+     .form-inline .ulrbox-item {
+        width: 650px;
+    }
+
+
+}
 
