aded CORS package to help with the api api to return json for both demo and live added a notification color notification of success change or failed to update data

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8362,6 +8362,14 @@ button.close {
   margin-bottom: 0;
 }
 
+.saving-field {
+  background-color: #f2dede;
+}
+
+.saving-field.success {
+  background-color: #dff0d8;
+}
+
 .scroll-content-box {
   position: relative;
 }
