--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -26,6 +26,11 @@
     }
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; 
+}
 
 .scroll-content-box {
 	position: relative;
