campaign status, menu updated, add campaign, protection to not un check accidentally.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8515,6 +8515,13 @@ input[type=number]::-webkit-outer-spin-button {
   animation-delay: -0.20s;
 }
 
+.divider-vertical {
+  height: 50px;
+  margin: 0 9px;
+  border-left: 1px solid #F2F2F2;
+  border-right: 1px solid #FFF;
+}
+
 @-webkit-keyframes sk-bouncedelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
@@ -8565,7 +8572,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (min-width: 1200px) {
   .form-inline .ulrbox-item {
-    width: 650px;
+    width: 620px;
   }
 }
 
