--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -182,6 +182,13 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
+.divider-vertical {
+    height: 50px;
+    margin: 0 9px;
+    border-left: 1px solid #F2F2F2;
+    border-right: 1px solid #FFF;
+}
+
 
 // .spinner--blue>div {
 //     background: rgba(46, 129, 182, 1);
@@ -249,7 +256,7 @@ input[type=number]::-webkit-outer-spin-button {
 @media (min-width: 1200px) {
 
      .form-inline .ulrbox-item {
-        width: 650px;
+        width: 620px;
     }
 
 
