Add series of vue panels. Clean up commented code..

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -36,3 +36,7 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+$campaign-panel-bg-color: #e4e4e4;
+$campaign-panel-border-color: #a3aeb5;
+
+$border-radius: 4px;
