--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9127,3 +9127,68 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
+a.btn.store-edit-button {
+  display: block;
+}
+
+a.telephone-number {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+button.btn.close-locations,
+button.btn.show-locations {
+  margin-bottom: 10px;
+}
+
+ul.sub-list {
+  padding-left: 18px;
+}
+
+#store-list-campaign .panel.simple-panel.campaign-panel {
+  border-bottom: 0;
+}
+
+#store-list-campaign :first-child .panel.simple-panel.campaign-panel {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+#store-list-campaign :last-child .panel.simple-panel.campaign-panel {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: 1px solid #a3aeb5;
+}
+
+.campaign-panel-container .panel.simple-panel.campaign-panel {
+  background-color: #e4e4e4;
+  border: 1px solid #a3aeb5;
+  border-radius: 0;
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  a.btn.store-edit-button {
+    display: inline-block;
+  }
+
+  button.btn.show-locations,
+  .panel.simple-panel.mb-0,
+  a.telephone-number {
+    margin-bottom: 0;
+  }
+
+  h3.store-name {
+    margin-top: 0;
+  }
+
+  .flex-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
